fix padding & letter-spacing in section portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -404,8 +404,8 @@ section {
   color: #f4f4fd;
   font-size: 16px;
   line-height: 1.5; /* 150% */
-  letter-spacing: -0.02em;
-  padding: 40px 32px 164px 40px;
+  letter-spacing: 0.02em;
+  padding: 40px 32px;
   height: 100%;
   width: 100%;
   display: flex;
@@ -458,7 +458,7 @@ section {
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17; /* 116.667% */
-  letter-spacing: -0.03em;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
   display: inline-block;
   margin-bottom: 16px;
@@ -469,7 +469,7 @@ section {
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17; /* 116.667% */
-  letter-spacing: -0.03em;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 .foter-text {
@@ -477,7 +477,7 @@ section {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5; /* 150% */
-  letter-spacing: -0.02em;
+  letter-spacing: 0.02em;
   max-width: 264px;
 }
 /* Footer social */
@@ -487,7 +487,7 @@ section {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5; /* 150% */
-  letter-spacing: -0.02em;
+  letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
 .footer-icon-list {
